--- a/index.html
+++ b/index.html
@@ -62,7 +62,29 @@
 
   <hr>
 
-  
+  <h2>@navigation</h2>
+    
+  <nav>
+    <h3>Brand NAme</h3>
+    <ul>
+      <li>
+        <a href="/">Home</a>
+      </li>
+      <li>
+        <a href="/">About</a></li>
+      <li>
+        <a href="">Contact</a></li>
+    </ul>
+  </nav>
+
+  <hr>
+
+  <h2>@Header</h2>
+
+  <header>
+    <img src="https://pbs.twimg.com/profile_images/959291281246642177/52oOzHVF_200x200.jpg"   alt="Martin Ur Fan" >
+    <h1>Heading</h1>
+  </header>
     
 
 
