CSS new updated

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Component Liblary</title>
+
+   <link href="styles.css" rel="stylesheet">
 </head>
-<body>
-  <h1 style="text-align: center;font-size: xx-large;">Welcome To Ayush's Blog</h1>
-  <p>I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
+<body> 
+  <h1 id="lib-header" style="text-align: center;font-size: xx-large;">Welcome To Ayush's Blog</h1>
+  <p class="para">I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
 
   <hr>
 
   <h2>@typography</h2>
 
   <h1>This is biggest heading</h1>
-  <p>This is normal text</p>
-  <small>This relatively smaller text</small>
+  <p class="para">This is normal text</p>
+  <small class="para">This relatively smaller text</small>
 
   <hr>
 
