--- a/index.html
+++ b/index.html
@@ -8,35 +8,36 @@
    <link href="styles.css" rel="stylesheet">
 </head>
 <body> 
-  <h1 id="lib-header" style="text-align: center;font-size: xx-large;">Welcome To Ayush's Blog</h1>
-  <p class="para">I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
+  <h1 style="text-align: center;font-size: xx-large;">Welcome To Ayush's Blog</h1>
+  
+  <p>I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
 
   <hr>
 
   <h2>@typography</h2>
 
   <h1>This is biggest heading</h1>
-  <p class="para">This is normal text</p>
-  <small class="para">This relatively smaller text</small>
+  <p >This is normal text</p>
+  <small >This relatively smaller text</small>
 
   <hr>
 
   <h2>@Container</h2>
 
   <h3>Fluid Container</h3>
-  <div>It will go till the end of the page</div>
+  <div class="container">It will go till the end of the page. It will go till specifies width, it is a very interesting thing in html. We will learn a lot from this. Aur kitna kachra bharu jisse ki tu end of the page jaayega</div>
 
-  <h3>Center Container</h3>
-  <div>It will go till specifies width</div>
+  <h3 class="container">Center Container</h3>
+  <div class="container container-centre">It will go till specifies width, it is a very interesting thing in html. We will learn a lot from this.</div>
 
    <hr>
 
    <h2>@Links</h2>
 
-   <h2><a href="https://google.com">Google</a></h2>
-   <a href="/">Secondary</a>
-   <a href="\\">lil</a>
-
+   <a class="link link-primary"href="https://google.com">Primary Link</a>
+   <a class="link link-secondary" href="/">Secondary Link</a>
+   <br>
+   <br>
    <hr>
 
   <h2>@Lists</h2>
