--- a/index.html
+++ b/index.html
@@ -36,14 +36,13 @@
 
    <a class="link link-primary"href="https://google.com">Primary Link</a>
    <a class="link link-secondary" href="/">Secondary Link</a>
-   <br>
-   <br>
+   
    <hr>
 
   <h2>@Lists</h2>
 
   <h3>Unordered List</h3>
-  <ul>
+  <ul class="link-non-bullets">
     <li>one</li>
     <li>two</i>
     <li>three</li>
@@ -51,9 +50,9 @@
 
   <h3>Ordered list</h3>
   <ol>
-    <li>ONE</li>
-    <li>TWO</li>
-    <li>THREE</li>
+    <li class="list-item-inline">ONE</li>
+    <li class="list-item-inline">TWO</li>
+    <li class="list-item-inline">THREE</li>
   </ol>
 
   <h3>ReverseOrdered list</h3>
