--- a/index.html
+++ b/index.html
@@ -7,9 +7,26 @@
 
    <link href="styles.css" rel="stylesheet">
 </head>
-<body> 
-  <h1 style="text-align: center;font-size: xx-large;">Welcome To Ayush's Blog</h1>
-  
+<body>
+  <div class="content">
+  <div class="header container"> 
+  <h1 class="header-title">Welcome To Ayush's Blog</h1>
+  <ul class="link-non-bullets header-pills">
+     <li class="list-item-inline">
+        <a class="link" href="/">Home</a>
+    </li>
+     <li class="list-item-inline">
+       <a class="link" href="/">About</a>
+    </li>
+     <li class="list-item-inline">
+      <a class="link" href="/">Contact</a>
+    </li>
+  </ul>
+
+  </div>
+  <div>
+    <img class="img" src="undraw_online_everywhere_cd90.svg" alt="MELLO">
+  </div>
   <p>I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
 
   <hr>
@@ -57,17 +74,17 @@
 
   <h3>ReverseOrdered list</h3>
   <ol reversed>
-    <li>ONE</li>
-    <li>TWO</li>
-    <li>THREE</li>
+     <li class="list-item-inline">ONE</li>
+     <li class="list-item-inline">TWO</li>
+     <li class="list-item-inline">THREE</li>
   </ol>
 
   <hr>
 
   
     
+  </div>
 
-
-  <div style="height: 30vh"></div>
+  <!-- <div style="height: 30vh"></div> -->
 </body>
 </html> 
