--- a/index.html
+++ b/index.html
@@ -26,8 +26,9 @@
   </div>
   <div>
     <img class="img" src="undraw_online_everywhere_cd90.svg" alt="MELLO">
+    <!-- <img class="img" src="https://avatars2.githubusercontent.com/u/59119265?s=400&u=afee6b115aee1508be2ad426a701fa2ac74881ce&v=4" alt="MELLO"> -->
   </div>
-  <p>I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
+  <p>I'm have been crushing on Ayushi Das since First Year, plz god hume bhi iss sansaar ka fal chakhne ka mauqa do.</p>
 
   <hr>
 
@@ -79,7 +80,44 @@
      <li class="list-item-inline">THREE</li>
   </ol>
 
-  <hr>
+  <section class="section ow">
+    <div class="container container-centre">
+    <h1>News Headline</h1>
+    <p>Quick link
+      ➣ Seo
+      ➣ Logo Design
+      ➣ Graphic Design
+      ➣ App Development
+      ➣ Bulk Sms
+      ➣ Content Writting
+      ➣ Sitemap
+      Company
+      ➣ Contact
+      ➣ Our Achievements
+      ➣ Customer's FAQ
+      ➣ Refund Policy
+      ➣ Privacy Policy
+      ➣ Terms and Conditions
+      ➣ License & Copyright</p>
+    </div>
+  </section>
+
+
+  <footer class="footer container">
+    <h1 class="footer-header">Social Links</h1>
+    <ul class="link-non-bullets ">
+      <li class="list-item-inline">
+         <a class="link" href="/">Twitter</a>
+     </li>
+      <li class="list-item-inline">
+        <a class="link" href="/">LinkedIN</a>
+     </li>
+      <li class="list-item-inline">
+       <a class="link" href="/">Instagram</a>
+     </li>
+   </ul>
+  </footer>
+
 
   
     
