--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <img class="img" src="undraw_online_everywhere_cd90.svg" alt="MELLO">
     <!-- <img class="img" src="https://avatars2.githubusercontent.com/u/59119265?s=400&u=afee6b115aee1508be2ad426a701fa2ac74881ce&v=4" alt="MELLO"> -->
   </div>
-  <p>I'm have been crushing on Ayushi Das since First Year, plz god hume bhi iss sansaar ka fal chakhne ka mauqa do.</p>
+  <p>I'm attending NEOG.camp and I want to make libary which would make all my projects look good and Consistent.</p>
 
   <hr>
 
